After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 668315 - Sound preferences: mouse scrolling balance only works for right.
Sound preferences: mouse scrolling balance only works for right.
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Sound
3.3.x
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-01-20 04:00 UTC by Robert Roth
Modified: 2012-01-23 22:53 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Robert Roth 2012-01-20 04:00:22 UTC
Forwarded from Ubuntu:
https://bugs.launchpad.net/ubuntu/+source/gnome-control-center/+bug/918017

Steps to reproduce:

* Open the sound preferences dialog.
* Select output device
* Use the mouse wheel and roll upwards to move balance towards the right.
* Roll downwards and observe that you can only move back to center.

Of course, it should be possible to do the same thing in both directions. 

See http://git.gnome.org/browse/gnome-control-center/tree/panels/sound/gvc-balance-bar.c#n450, where the value is reset to 0 if it goes below 0, while the lower bound of the non-LFE balance types (Left Right, Front Read) is set as -1 (see http://git.gnome.org/browse/gnome-control-center/tree/panels/sound/gvc-balance-bar.c#n272)
Comment 1 Bastien Nocera 2012-01-23 21:16:04 UTC
Next time please include the original reporter's name, so I don't have to fish it out of launchpad.


commit ca0f4b204bc84119f93ff84b329fe32ed23b20e5
Author: Bastien Nocera <hadess@hadess.net>
Date:   Mon Jan 23 21:12:19 2012 +0000

    sound: Scrolling on balance only works for right
    
    We used to use 0.0 as the lower bound value but the lower bound
    value is -1.0, which means "all the way to the left" for right-left
    balance.
    
    Spotted by Jo-Erlend Schinstad
    
    https://bugzilla.gnome.org/show_bug.cgi?id=668315
Comment 2 Robert Roth 2012-01-23 22:53:36 UTC
OK, I will do that next time. Sorry for the trouble caused.