sound: Scrolling on balance only works for right

We used to use 0.0 as the lower bound value but the lower bound
value is -1.0, which means "all the way to the left" for right-left
balance.

Spotted by Jo-Erlend Schinstad

https://bugzilla.gnome.org/show_bug.cgi?id=668315